2000-07-24  Dan Winship  <danw@helixcode.com>

	* e-shell.c, main.c: Remove GOAD support.

	* evolution-shell-component-client.c: Remove GOAD support.
	(evolution_shell_component_client_new): Give the "maybe
	OAF_INFO_PATH" message if no oafinfo file was found, and give a
	"consult previous error messages" message if the component was
	found but not activated. Abort in either case.

2000-07-23  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view-menu.c: Converted to use `bonobo_ui_handler_*()'
	stuff directly, instead of converting from GnomeUIInfo.
	(command_quit): Update arg types for BonoboUIHandler.
	(command_run_bugbuddy): Likewise.
	(command_about_box): Likewise.
	(command_new_task): Removed.
	(command_new_journal_entry): Removed.
	(menu_create_file_new): New.
	(menu_create_file): New.
	(menu_create_edit): New.
	(menu_create_view): New.
	(menu_create_tools): New.
	(menu_create_actions): New.
	(e_shell_view_menu_setup): Create menus using them instead of
	converting from GnomeUIInfo.

2000-07-22  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell.c (e_shell_construct): Don't unref NULL shortcuts, you
	idiot.

2000-07-22  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view.c (e_shell_view_set_folder_bar_mode): Make the
	title bar non-clickable when the folder tree is visible.

	* e-shell-folder-title-bar.c: New members `button_arrow' and
	`clickable' in `EShellFolderTitleBarPrivate'.  Renamed `label'
	into `button_label'.  Added `label'.
	(init): Init them.
	(e_shell_folder_title_bar_construct): Pass a pointer to the title
	bar as the user data for the "realize" signal.  Create `label'.
	(title_button_box_realize_cb): Use the `button_arrow' member
	instead of using `gtk_object_{set,get}_data()'.
	(setup_style): Set the style for `label' too.
	(e_shell_folder_title_bar_set_clickable): New.
	(e_shell_folder_title_bar_set_title): Set both `label' and
	`button_label'.

2000-07-21  Ettore Perazzoli  <ettore@helixcode.com>
